# ulysses

./: .dockerignore  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
.hindsight/: config
api/: .env.example  .gitignore  Cargo.toml
api/docs/: ARCHITECTURE.md
api/migrations/: 20260701000001_create_profiles.sql
api/src/: config.rs  context.rs  error.rs  lib.rs  main.rs
api/src/modules/: mod.rs
api/src/modules/proxy/: controller_http.rs  controller_ws.rs  mod.rs  repository.rs  service.rs
api/src/modules/proxy/tests/: controller_http.rs  integration.rs  mod.rs  repository.rs  service.rs
docker/: Dockerfile  Dockerfile.comment  docker-compose.yml
docs/: ARCHITECTURE.md
src/: config.rs  context.rs  error.rs  lib.rs  main.rs  main_wasm.rs  types.rs
src/api/: mod.rs
src/api/proxy/: controller_http.rs  mod.rs  repository.rs  service.rs
src/api/proxy/tests/: controller_http.rs  controller_ws.rs  integration.rs  repository.rs  service.rs
src/models/: mod.rs
src/web/: mod.rs  server_fns.rs
src/web/components/: mod.rs
src/web/components/layout/: mod.rs
src/web/components/ui/: button.rs  mod.rs
src/web/domain/: mod.rs
src/web/domain/profiles/: mod.rs  profile_card.rs
src/web/routes/: dashboard.rs  home.rs  mod.rs  settings.rs
style/: main.css
tests/: web_routes.rs  web_server_fns.rs
web/: package.json  tsconfig.app.json  vite.config.ts
web/docs/: ARCHITECTURE.md
web/src/: index.css  main.tsx  routeTree.gen.ts  types.ts
web/src/features/auth/: index.ts
web/src/features/auth/api/: use-login.ts
web/src/features/auth/components/: login-form.test.tsx  login-form.tsx
web/src/features/profiles/: index.ts
web/src/features/profiles/api/: use-profile.test.tsx  use-profile.ts
web/src/features/profiles/components/: avatar-uploader.test.tsx  avatar-uploader.tsx  profile-card.test.tsx  profile-card.tsx
web/src/features/profiles/forms/: profile-schema.ts
web/src/hooks/: use-theme.ts
web/src/lib/: api-client.ts
web/src/routes/: -index.test.tsx  __root.tsx  dashboard.tsx  index.tsx  settings.tsx
web/tests/: handlers.ts  setup.ts
