[package]
name = "ulysses-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Ulysses API — AI proxy server with profile management"
license = "MIT"
repository = "https://github.com/stevenhansel/ulysses"
readme = "README.md"
keywords = ["ai", "proxy", "api", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace", "compression-gzip", "fs"] }
tower = "0.5"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
ts-rs = { version = "12", features = ["serde-compat"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cargo = "warn"
pedantic = { level = "warn", priority = -1 }
multiple-crate-versions = { level = "allow", priority = 1 }

[dev-dependencies]
axum-test = "21"
serial_test = "3"
